# happen-devkit

./: .gitignore  README.md
detection_socket/: test_socket_server.py
detection_socket/test_socket_client/: CMakeLists.txt  README.md
detection_socket/test_socket_client/include/: socket_client.hpp
detection_socket/test_socket_client/python3/: test_socker_client.py
detection_socket/test_socket_client/src/: main.cpp  socket_client.cpp
producer_consumer/: CMakeLists.txt
producer_consumer/include/: multi_thread_utils.hpp
producer_consumer/python/: test_video.py
producer_consumer/scripts/: test_mutli_thread.sh
producer_consumer/src/: main.cpp  multi_thread_utils.cpp
